--- a/Assets/CSS/styles.css
+++ b/Assets/CSS/styles.css
@@ -611,8 +611,11 @@ textarea:focus:not(:focus-visible) {
 .hero-text-content {
     position: relative;
     z-index: 3;
-    background-color: transparent;
-    padding: 1rem;
+    background-color: var(--color-background);
+    padding: 1.5rem;
+    text-align: center;
+    /* Opcional: border-radius: var(--border-radius); */
+    /* Opcional: box-shadow: 0 5px 25px rgba(0, 0, 0, 0.15); */
 }
 .hero h1 {
     font-size: clamp(2.0rem, 6vw, 3.5rem);
